--- a/.github/workflows/sonarqube-deployent.yml
+++ b/.github/workflows/sonarqube-deployent.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: yimbuh-sonarqube
+  IMAGE_NAME: yimbuh-sonarqube-1
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
